@@ -13,9 +13,8 @@ soubory
 gammu\-smsd(1) podporuje několik služeb. Aktuálně použitá je zvolená v
 konfiguračním souboru gammu\-smsdrc(5).
 
-FILES backend stores all data on a filesystem in folders defined by
-configuration (see gammu\-smsdrc(5) for description of configuration
-options).
+Služba FILES ukládá všechna data na souborovém systému v adresářích zadaných
+v konfiguračním souboru (viz gammu\-smsdrc(5)· pro popis těchto parametrů).
 
 .SS "Přijímání zpráv"
 
