@@ -14,9 +14,9 @@ databázový server MySQL
 gammu\-smsd(1) podporuje několik služeb. Aktuálně použitá je zvolená v
 konfiguračním souboru gammu\-smsdrc(5).
 
-MYSQL backend stores all data in a MySQL database server, which parameters
-are defined by configuration (see gammu\-smsdrc(5) for description of
-configuration options).
+Služba MYSQL ukládá všechna data na databázovém serveru MySQL, jehož
+parametry jsou zadány v konfiguračním souboru (viz gammu\-smsdrc(5)· pro
+popis těchto parametrů).
 
 .SS "Přijímání zpráv"
 
