@@ -14,9 +14,9 @@ databázový server PostgreSQL
 gammu\-smsd(1) podporuje několik služeb. Aktuálně použitá je zvolená v
 konfiguračním souboru gammu\-smsdrc(5).
 
-PGSQL backend stores all data in a PostgreSQL database server, which
-parameters are defined by configuration (see gammu\-smsdrc(5) for description
-of configuration options).
+Služba PGSQL ukládá všechna data na databázovém serveru PostgreSQL, jehož
+parametry jsou zadány v konfiguračním souboru (viz gammu\-smsdrc(5)· pro
+popis těchto parametrů).
 
 .SS "Přijímání zpráv"
 
