@@ -59,6 +59,11 @@ Ukončí SMSD službu ve Windows.
 .TP 
 \fB\-S\fP, \fB\-\-run\-service\fP
 Spustí SMSD jako službu ve Windows.
+.TP 
+\fB\-n\fP, \fB\-\-service\-name\fP=\fIname\fP
+Určí jméno služby ve Windows. Každá služba potřebuje unikátní jméno, takže
+pokud chcete mít spuštěných více instancí SMSD, musíte pojmenovat každou
+instanci jinak. Výchozí jméno je "GammuSMSD".
 
 .SH "DALŠÍ INFORMACE"
 gammu\-smsdrc(5), gammu(1), gammu\-smsd\-inject(1)
