@@ -55,6 +55,11 @@ Stops SMSD Windows service.
 .TP
 \fB\-S\fR, \fB\-\-run\-service\fR
 Runs pogram as SMSD Windows service.
+.TP
+\fB\-n\fR, \fB\-\-service\-name\fR=\fIname\fR
+Defines name of a Windows service. Each service requires an unique name, so if
+you want to run several SMSD instances, you have to name each service
+differently. Default is "GammuSMSD".
 
 .SH SEE ALSO
 gammu\-smsdrc(5), gammu(1), gammu\-smsd\-inject(1)
